fixed fix block appearence on mobile

--- a/src/style/partials/fix.scss
+++ b/src/style/partials/fix.scss
@@ -95,7 +95,7 @@
 // ********** MEDIA **********
 @media only screen and (max-width: 768px) {
   .fix {
-    &__container {
+    &__container--is-visible {
       display: block;
     }
 
@@ -109,6 +109,31 @@
       display: block;
       width: 100%;
       min-height: 350px;
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .fix {
+    &__banner {
+      display: block;
+    }
+
+    &__text {
+      margin-bottom: 30px;
+    }
+
+    &__tab {
+      display: block;
+      width: 100%;
+    }
+
+    &__tab-name {
+      margin-bottom: 15px;
+    }
+
+    &__tab-descr {
+      margin-bottom: 15px;
     }
   }
 }
